--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,3 +8,9 @@ imagehash==4.3.1
 numpy==1.26.3
 pydantic==2.5.3
 aiofiles==23.2.1
+python-dotenv==1.0.0
+google-auth==2.27.0
+google-auth-oauthlib==1.2.0
+google-api-python-client==2.116.0
+python-jose[cryptography]==3.3.0
+httpx==0.26.0
